<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:title="@string/Delete"
        android:icon="@drawable/delete"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/pin"
        android:title="@string/pinneding"
        android:icon="@drawable/baseline_push_pin_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_archive"
        android:title="@string/nav_archive"
        android:icon="@drawable/baseline_archive_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notification"
        android:title="@string/notifycate"
        android:icon="@drawable/baseline_circle_notifications_24"
        app:showAsAction="ifRoom" />


</menu>
