<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Class.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="start|center_vertical">



            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_folder"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@android:color/darker_gray"
                android:paddingHorizontal="8dp">


                <ImageButton
                    android:id="@+id/sigment2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:background="@null"
                    android:scaleType="centerInside"
                    android:src="@drawable/round_segment_24"
                    app:tint="@color/black" />


                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:background="@null"
                    android:iconifiedByDefault="false"
                    android:queryHint="@string/search_hint"
                    android:paddingHorizontal="16dp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_folder"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@android:color/darker_gray">

            <Button
                android:id="@+id/notesRecyclerView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:text="Main Folder"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@android:color/transparent"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_folder"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="16dp"
            android:paddingBottom="16dp"
            android:scrollbars="vertical"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addFolderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/yellow"
            app:tint="@color/black"
            android:contentDescription="Добавить папку"/>

        <TextView
            android:id="@+id/countFolders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:hint="Кол - во"/>
    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:menu="@menu/drawer_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>
